--- a/usbCom.ioc
+++ b/usbCom.ioc
@@ -92,7 +92,7 @@ NVIC.EXTI0_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.OTG_FS_IRQn=true\:7\:0\:true\:false\:true\:true\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
@@ -477,7 +477,7 @@ ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false
-RCC.ADCFreq_Value=48000000
+RCC.ADCFreq_Value=96000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
 RCC.APB1TimFreq_Value=80000000
@@ -485,7 +485,6 @@ RCC.APB2Freq_Value=80000000
 RCC.APB2TimFreq_Value=80000000
 RCC.CortexFreq_Value=80000000
 RCC.DFSDMFreq_Value=80000000
-RCC.EnbaleCSS=true
 RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=80000000
@@ -494,7 +493,7 @@ RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=80000000
 RCC.I2C2Freq_Value=80000000
 RCC.I2C3Freq_Value=80000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DFSDMFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1Q,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2RoutputFreq_Value,PREFETCH_ENABLE,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value
 RCC.LCDFreq_Value=32768
 RCC.LPTIM1Freq_Value=80000000
 RCC.LPTIM2Freq_Value=80000000
@@ -502,25 +501,28 @@ RCC.LPUART1Freq_Value=80000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=80000000
-RCC.MSI_VALUE=4000000
-RCC.PLLN=20
-RCC.PLLPoutputFreq_Value=22857142.85714286
-RCC.PLLQoutputFreq_Value=80000000
+RCC.MSIClockRange=RCC_MSIRANGE_11
+RCC.MSI_VALUE=48000000
+RCC.PLLM=6
+RCC.PLLN=40
+RCC.PLLPoutputFreq_Value=45714285.71428572
+RCC.PLLQoutputFreq_Value=160000000
+RCC.PLLR=RCC_PLLR_DIV4
 RCC.PLLRCLKFreq_Value=80000000
-RCC.PLLSAI1N=12
-RCC.PLLSAI1PoutputFreq_Value=13714285.714285715
+RCC.PLLSAI1N=24
+RCC.PLLSAI1PoutputFreq_Value=27428571.42857143
+RCC.PLLSAI1Q=RCC_PLLQ_DIV4
 RCC.PLLSAI1QoutputFreq_Value=48000000
-RCC.PLLSAI1RoutputFreq_Value=48000000
+RCC.PLLSAI1RoutputFreq_Value=96000000
 RCC.PLLSAI2PoutputFreq_Value=9142857.142857144
 RCC.PLLSAI2RoutputFreq_Value=32000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PREFETCH_ENABLE=1
 RCC.PWRFreq_Value=80000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
-RCC.SAI1Freq_Value=13714285.714285715
-RCC.SAI2Freq_Value=13714285.714285715
+RCC.SAI1Freq_Value=27428571.42857143
+RCC.SAI2Freq_Value=27428571.42857143
 RCC.SDMMCFreq_Value=48000000
 RCC.SWPMI1Freq_Value=80000000
 RCC.SYSCLKFreq_VALUE=80000000
@@ -532,8 +534,8 @@ RCC.USART2Freq_Value=80000000
 RCC.USART3Freq_Value=80000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInputFreq_Value=8000000
-RCC.VCOOutputFreq_Value=160000000
-RCC.VCOSAI1OutputFreq_Value=96000000
+RCC.VCOOutputFreq_Value=320000000
+RCC.VCOSAI1OutputFreq_Value=192000000
 RCC.VCOSAI2OutputFreq_Value=64000000
 SAI1.IPParameters=Instance-SAI_A_MasterWithClock,MClockEnable-SAI_A_MasterWithClock,Instance-SAI_B_SyncSlave,VirtualMode-SAI_B_SyncSlave,Synchro-SAI_B_SyncSlave,VirtualMode-SAI_A_MasterWithClock
 SAI1.Instance-SAI_A_MasterWithClock=SAI$Index_Block_A
@@ -556,9 +558,10 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI2.CalculateBaudRate=40.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=Mode,CalculateBaudRate,VirtualType,Direction
+SPI2.IPParameters=Mode,CalculateBaudRate,VirtualType,Direction,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode-Asynchronous
