--- a/usbCom.ioc
+++ b/usbCom.ioc
@@ -745,9 +745,9 @@ ProjectManager.ProjectFileName=usbCom.ioc
 ProjectManager.ProjectName=usbCom
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=MDK-ARM V5.27
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=false
+ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_LCD_Init-LCD-false-HAL-true,6-MX_QUADSPI_Init-QUADSPI-false-HAL-true,7-MX_SAI1_Init-SAI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_USART2_UART_Init-USART2-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,11-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreq_Value=96000000
 RCC.AHBFreq_Value=80000000
